# winsrv-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  winapi.rs
